--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         run: sudo npm install --global surge
 
       - name: Deploying App
-        run: surge ./ bootcamp-2020-demo-by-haris.surge.sh $ --token {{ secrets.SURGETOKEN }}.
+        run: surge ./ bootcamp-2020-demo-by-haris.surge.sh $ --token {{ secrets.SURGETOKEN }}
